Fix: search history text overflows if search term is long (#6728)
* fix: search wrapper css

* removed ellipsis overflow

* fix misalignment

--- a/src/renderer/components/ft-input/ft-input.css
+++ b/src/renderer/components/ft-input/ft-input.css
@@ -210,6 +210,16 @@ body[dir='rtl'] .ft-input-component.search.showClearTextButton:focus-within .inp
   padding-inline: 15px;
 }
 
+.optionWrapper {
+  display: flex;
+  align-items: baseline;
+  overflow: hidden;
+}
+
+.optionWrapper span {
+  overflow: hidden;
+}
+
 .searchResultIcon {
   opacity: 0.6;
   padding-inline-end: 10px;
